--- a/packages/day-4/Cargo.toml
+++ b/packages/day-4/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "advent-of-code-2023-day-3"
+name = "advent-of-code-2023-day-4"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = "1.10.2"
 read = { path = "../read" }
+regex = "1.10.2"
+nom = "7.1.3"
