--- a/packages/day-7/Cargo.toml
+++ b/packages/day-7/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "advent-of-code-2023-day-6"
+name = "advent-of-code-2023-day-7"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+regex = { version = "1.10.2", features = [] }
